# born-mono

./: .gitignore  README.md  build.sh
QTCube/: .gitignore  CMakeLists.txt  README.md  RUN_THIS.example  Sep_cube.in  common.pri  main.cpp  qrc_qt_cube.cpp  qt_cube.icns  qt_cube.qrc
QTCube/base/: CMakeLists.txt  dynamic.cpp  dynamic.h  fastmarch.cpp  fastmarch.h  float_1d.cpp  float_1d.h  float_2d.cpp  float_2d.h  hypercube_float.cpp  hypercube_float.h  l2_norm.cpp  l2_norm.h  lloyd.cpp  lloyd.h  lloyd_1d.cpp  lloyd_1d.h  my_score.h  my_vector.h  norm.h  norm_vector.cpp  norm_vector.h  param_func.cpp  param_func.h  path.h  percentile.cpp  percentile.h  pqueue.cpp  pqueue.h  viterbi.cpp  viterbi.h
QTCube/dockers/: Docker.CentOS-noSEP  Dockerfile.CentOSSEP  Dockerfile.debian  Dockerfile.fromSEP
QTCube/gui/: CMakeLists.txt  anno.cpp  anno.h  ano_panel.cpp  ano_panel.h  auto_brown.cpp  auto_brown.h  auto_viteribi.cpp  auto_viteribi.h  autopick.cpp  autopick.h  autopick_2d.cpp  autopick_2d.h  bar_pt.h  buffer.cpp  buffer.h  byte_buffer.cpp  byte_buffer.h  centerwindow.cpp  centerwindow.h  clip_bar.cpp  clip_bar.h  color_panel.cpp  color_panel.h  contour.cpp  contour.h  created_data.cpp  created_data.h  cube.cpp  cube.h  cube_cut.cpp  cube_cut.h  data_panel.cpp  data_panel.h  dataset.cpp  dataset.h  datasets.cpp  datasets.h  display_panel.cpp  display_panel.h  (+131 more)
QTCube/images/: images.txt
SEPlib/interact/RickMovie/: CMakeLists.txt  README  axis.h  color.h  colorbar.h  data.h  draw.h  help.h  main.h  map.h  movie.h  pick.h  pik.h  plane.h  rargs.h  region.h  render.h  section.h  sep_axis.c  sep_color.c  sep_colorbar.c  sep_data.c  sep_draw.c  sep_edit.c  sep_help.c  sep_main.c  sep_map.c  sep_movie.c  sep_pick.c  sep_pik.c  sep_plane.c  sep_region.c  sep_render.c  sep_section.c  sep_ui_canvas.c  sep_ui_menu.c  sep_ui_panel.c  sep_ui_window.c  sep_view.c  ui.h  (+1 more)
SEPlib/interact/Ricksep/: CMakeLists.txt  Rick4d.pl.in  Rickmulti.pl.in  Rickvelan.pl.in  ano.c  ano.h  axis.c  axis.h  color.c  color.h  colorbar.c  colorbar.h  data.c  data.h  draw.c  draw.h  dummy.c  edit.c  edit.h  func.h  grab_param.c  help.c  help.h  main.c  main.csep  main.h  map.c  map.h  movie.c  movie.h  pick.c  pick.h  pik.c  pik.h  plane.c  plane.h  rargs.h  region.c  region.h  render.c  (+16 more)
SEPlib/interact/qt_cube/: CMakeLists.txt  Dip_mult.cpp  Dip_space.cpp  Dipint.cpp  Inverse_test.cpp  Sep_cube  Sep_cube.py.in  Test.cpp  Var_grid.cpp  allp3.h  allpass.cpp  allpass.h  auto_brown.cpp  auto_brown.h  auto_viteribi.cpp  auto_viteribi.h  autopick.cpp  autopick.h  autopick_2d.cpp  autopick_2d.h  autopick_menu.cpp  autopick_menu.h  axis.cpp  axis.h  bar_pt.h  buffer.cpp  buffer.h  byte_buffer.cpp  byte_buffer.h  byte_mmap_buffer.cpp  byte_mmap_buffer.h  centerwindow.cpp  centerwindow.h  cg.cpp  cg.h  cgstep.cpp  cgstep.h  change.cpp  change.h  clip_bar.cpp  (+297 more)
SEPlib/seplib_java/lib/: CMakeLists.txt  auxpar_jni.c  auxputch_jni.c  datapath_jni.c  doc_jni.c  edu_stanford_sep_seplib_corelibs_sep_Auxpar.h  edu_stanford_sep_seplib_corelibs_sep_Auxputch.h  edu_stanford_sep_seplib_corelibs_sep_Datapath.h  edu_stanford_sep_seplib_corelibs_sep_Doc.h  edu_stanford_sep_seplib_corelibs_sep_Fetch.h  edu_stanford_sep_seplib_corelibs_sep_GetNumberAxes.h  edu_stanford_sep_seplib_corelibs_sep_GetPutAxis.h  edu_stanford_sep_seplib_corelibs_sep_Getch.h  edu_stanford_sep_seplib_corelibs_sep_Hclose.h  edu_stanford_sep_seplib_corelibs_sep_HelixCart.h  edu_stanford_sep_seplib_corelibs_sep_Hetch.h  edu_stanford_sep_seplib_corelibs_sep_Initpar.h  edu_stanford_sep_seplib_corelibs_sep_Noheader.h  edu_stanford_sep_seplib_corelibs_sep_Putch.h  edu_stanford_sep_seplib_corelibs_sep_Putlin.h  edu_stanford_sep_seplib_corelibs_sep_Redin.h  edu_stanford_sep_seplib_corelibs_sep_Redout.h  edu_stanford_sep_seplib_corelibs_sep_Sreed.h  edu_stanford_sep_seplib_corelibs_sep_SreedWindow.h  edu_stanford_sep_seplib_corelibs_sep_Srite.h  edu_stanford_sep_seplib_corelibs_sep_SriteWindow.h  edu_stanford_sep_seplib_corelibs_sep_Sseek.h  edu_stanford_sep_seplib_corelibs_sep_Ssize.h  edu_stanford_sep_seplib_corelibs_sep_Tetch.h  fetch_jni.c  getch_jni.c  getnumberaxes_jni.c  getputaxis_jni.c  hclose_jni.c  hetch_jni.c  initpar_jni.c  noheader_jni.c  putch_jni.c  putlin_jni.c  redin_jni.c  (+8 more)
SEPlib/seplib_prog/sep_graphics/: Box.csep  CMakeLists.txt  Contour.csep  Cubeplot.csep  Dip_azim.F90sep  Dip_azim.f90s  Dots.csep  Ftplot.csep  Graph.csep  Grey.csep  Histogram.csep  Merge_field.csep  Operplot.csep  Overlay.csep  Seis_vel.F90sep  Ta2vplot.csep  Taplot.csep  Thplot.csep  Wiggle.csep
SEPlib/vplot/filters/: CMakeLists.txt  dovplot.c  init_vplot.c  init_vplot_SEP.c  (+3 more)
genericIO/: .gitignore  CMakeLists.txt  Doxyfile  RUN_THIS.example  build.sh  genericIO.h.in  genericIOConfig.cmake.in  ioConfig.h.in
genericIO/cmake/: FindZFP.cmake
genericIO/cpp/: CMakeLists.txt  basicIO.cpp  basicIO.h  genericC.cpp  genericC.h  genericFile.cpp  genericFile.h  genericIO.cpp  genericIO.h  ioModes.cpp  ioModes.h  jsonGenericFile.cpp  jsonGenericFile.h  jsonGenericIO.cpp  jsonGenericIO.h  jsonParamObj.cpp  jsonParamObj.h  paramObj.cpp  paramObj.h  rsfIO.cpp  rsfIO.h  rsfParams.cpp  rsfParams.h  rsfRegFile.cpp  rsfRegFiles.h  segyIO.cpp  segyIO.h  sep3dFile.cpp  sep3dFile.h  sepIO.cpp  sepIO.h  sep_params.cpp  sep_params.h  sep_reg_file.cpp  sep_reg_file.h
genericIO/dockers/: Dockerfile.centos
genericIO/fortran/: CMakeLists.txt  axis.f90  cIO.f90  c_param.f90  c_regfile.f90  c_stubs.f90  genericFile.f90  genericIO.f90  hypercube.f90  ioModes.f90  param_func.f90  rsfIO.f90  rsf_param.f90  rsf_reg_file.f90  sepIO.f90  sep_param.f90  sep_reg_file.f90
genericIO/module/: genericIO.in
genericIO/util/: CMakeLists.txt  Compress.cc  Decompress.cc  Info.cc  SEP2JSON  Window.cc
hypercube/: CMakeLists.txt  build.sh  hypercubeConfig.cmake.in
hypercube/dockers/: Dockerfile.centos  Dockerfile.debian
hypercube/include/: hypercube.h
hypercube/lib/: CMakeLists.txt  axis.cpp  axis.h  hypercube.cpp  hypercube.h  hypercubeConfig.cmake  hypercubeExports-noconfig.cmake  hypercubeExports.cmake
(+3223 files in other folders)
